# linera-web

./: .env  .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  flake.nix  manifest.json  manifest_v2.json  manifest_v3.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: build.yml
background-worker/: Cargo.toml
background-worker/js/: content_script.js
background-worker/src/: lib.rs
client/: Cargo.toml  build.bash  package.json
client-worker/: Cargo.toml  build.sh
client-worker/src/: chain_listener.rs  config.rs  lib.rs  wallet.rs
client/src/: lib.rs
examples/assets/: style.css
examples/counter/: index.html  package.json  style.css
examples/hosted-counter/: index.html  package-lock.json  package.json  style.css  vite.config.ts
examples/hosted-counter-metamask/: index.html  package.json
examples/hosted-fungible/: index.html  mazelinera  package-lock.json  package.json  vite.config.ts
extension/: extension.vite.config.js  library.vite.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/public/assets/: shoelace
extension/src/: client.ts  colors.css  index.css  message.guard.ts  message.ts  messaging.ts  shoelace.css  shoelace.ts
extension/src/content-script/: index.ts
extension/src/options/: index.html
extension/src/popup/: index.html  index.ts  welcome.html
extension/src/service-web-worker/: index.ts  message.guard.ts  message.ts
extension/src/service-worker/: example-worker.ts  index.ts  message.guard.ts  message.ts  setup.ts  wallet.ts
extension/src/sidebar/: index.html  index.ts
extension/src/signer/: index.ts  signer.test.ts
js/: content_script.js  service_worker.js
linera-web/: manifest.json  package.json  pnpm-lock.yaml  popup.html  sidebar.html  tsconfig.json  vite.config.ts
linera-web/public/: manifest.json
linera-web/src/: index.css
sample-app/: index.html  linera.js
src/: lib.rs
(+21 files in other folders)
